--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -32,6 +32,16 @@
         <link href="{% static 'images/favicon-engine.png' %}" rel="shortcut icon" type="image/png">
     </head>
     <body>
+
+        <h1>Navbar</h1>
+        <hr>
+
+        <div class="container">
+            {% block content %}
+
+            {% endblock content %}
+        </div>
+
         <!-- JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js" 
