Create the layout for the checkout page

--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -9,7 +9,13 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="{% static 'css/main.css' %}" rel="stylesheet" type="text/css">
         <script src="https://kit.fontawesome.com/5420f5b85a.js" crossorigin="anonymous"></script>
-        <meta name="description" content="">
+        <meta name="description" content="Inline-6 Overnight specializes in the procurement, resale, shipment and 
+        delivery of specific, brand new straight-six combustion engines. With our supplier base stretching worldwide 
+        and with a supply chain that covers all locations of the globe, you can rest assured that we'll find the 
+        quality engine you need at the best available price and deliver it the next business day. Over 10 years of 
+        experience providing engine solutions to professional tuning shops, automobile repair businesses, garages, 
+        workshops, car service specialists and private owners, and a constant first-class service that you can rely 
+        on.">
         <meta name="author" content="Inline-6 Overnight">
         <meta name="keywords" content="2.6-litre, 2JZ-GTE, 3.0-litre, 3.2-litre, a80, auto, automobile, axle,
         balance, bank, bay, belt, best, block, bmw, body, bore, cam, camshaft, car, cast-iron, center, centre, chain,
