Create the payment option box element for the checkout page

--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -37,6 +37,12 @@
                     <input id="form-button" class="btn btn-success btn-block" type="submit" value="Continue">
                 </form>
             </div>
+            <br>
+
+            <div class="box-element hidden" id="payment-info">
+                <small>PayPal Options</small>
+            </div>
+
         </div>
 
         <div class="col-lg-6">
