--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -57,13 +57,13 @@
                 </ul>
                 <div class="form-inline my-2 my-lg-0">
                     <li>
-                        <a href="#" class="btn btn-warning">Register</a>
+                        <a href="#" class="btn btn-light">Register</a>
                     </li>
                     <li>
-                        <a href="#" class="btn btn-warning">Log in</a>
+                        <a href="#" class="btn btn-light">Log in</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="dropdown-toggle btn btn-warning" href="#" id="navbarDropdown" role="button" 
+                        <a class="dropdown-toggle btn btn-light" href="#" id="navbarDropdown" role="button" 
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         User
                         </a>
