--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -7,8 +7,8 @@
             <div class="box-element product">
                 <h6><strong>Product</strong></h6>
                 <hr>
-                <button class="btn btn-outline-secondary add-btn">Add to Cart</button>
-                <a class="btn btn-outline-success" href="#">View</a>
+                <button class="btn btn-dark add-btn">Add to Cart</button>
+                <a class="btn btn-outline-secondary" href="#">View</a>
                 <h4 style="display: inline-block; float: right">€20</h4>
             </div>
         </div>
@@ -17,8 +17,8 @@
             <div class="box-element product">
                 <h6><strong>Product</strong></h6>
                 <hr>
-                <button class="btn btn-outline-secondary add-btn">Add to Cart</button>
-                <a class="btn btn-outline-success" href="#">View</a>
+                <button class="btn btn-dark add-btn">Add to Cart</button>
+                <a class="btn btn-outline-secondary" href="#">View</a>
                 <h4 style="display: inline-block; float: right">€20</h4>
             </div>
         </div>
@@ -27,8 +27,8 @@
             <div class="box-element product">
                 <h6><strong>Product</strong></h6>
                 <hr>
-                <button class="btn btn-outline-secondary add-btn">Add to Cart</button>
-                <a class="btn btn-outline-success" href="#">View</a>
+                <button class="btn btn-dark add-btn">Add to Cart</button>
+                <a class="btn btn-outline-secondary" href="#">View</a>
                 <h4 style="display: inline-block; float: right">€20</h4>
             </div>
         </div>
