--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -3,8 +3,8 @@
 {% block content %}
     <div class="row">
         {% for product in products %}
-        <div class="col-lg-4">
-            <img class="thumbnail" src="{{product.image.url}}" alt="Product image">
+        <div class="col-lg-4 col-md-6 col-sm-6">
+            <img class="thumbnail" src="{{product.imageURL}}" alt="Product image">
             <div class="box-element product">
                 <h6><strong>{{product.name}}</strong></h6>
                 <hr>
