Create the javascript folder and file and add the the javascript link to main.html

--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -7,7 +7,9 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" 
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <!-- Link to the CSS folder in Static files -->
         <link href="{% static 'css/main.css' %}" rel="stylesheet" type="text/css">
+        <!-- Font Awesome -->
         <script src="https://kit.fontawesome.com/5420f5b85a.js" crossorigin="anonymous"></script>
         <meta name="description" content="Inline-6 Overnight specializes in the procurement, resale, shipment and 
         delivery of specific, brand new straight-six combustion engines. With our supplier base stretching worldwide 
@@ -96,5 +98,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" 
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" 
         crossorigin="anonymous"></script>
+        <!-- Link to the JS folder in Static files -->
+        <script type="text/javascript" src="{% static 'js/cart.js' %}"></script>
     </body>
 </html>
