--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -31,6 +31,9 @@
         timing, top, torque, toyota, transmission, tuning, turbo, turbocharged, turbocharger, twin-turbo, unit,
         valve, valvetrain, vehicle, vibration, warranty, website">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
+        <script type="text/javascript">
+            var user = '{{request.user}}'
+        </script>
         <title>
             {% block title %}
                 Inline-6 Overnight
