Create the view and the url path to send the add to cart button data to the view if the user is logged in

--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -31,6 +31,7 @@
         timing, top, torque, toyota, transmission, tuning, turbo, turbocharged, turbocharger, twin-turbo, unit,
         valve, valvetrain, vehicle, vibration, warranty, website">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
+        <!-- JavaScript variable to query the user to check his/her status -->
         <script type="text/javascript">
             var user = '{{request.user}}'
         </script>
