Add demo payment button

--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -40,6 +40,7 @@
             <br>
             <div class="box-element hidden" id="payment-info">
                 <small>PayPal Options</small>
+                <button id="make-payment">Make Payment</button>
             </div>
         </div>
         <div class="col-lg-6">
