Change the user alert message when payment is submitted

--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -136,7 +136,7 @@
         .then((response) => response.json())
         .then((data) => {
             console.log('Success:', data);
-            alert('Transaction completed');  
+            alert('Transaction completed! Your order will be delivered the next working day. Thank you for shopping with Inline-6 Overnight.');
             window.location.href = "{% url 'store' %}"
 
             })
