--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -65,7 +65,7 @@
 <!-- JavaScript -->
 <script type="text/javascript">
 	var shipping = '{{order.shipping}}'
-    var total = '{{order.get_cart_total|floatformat:2}}'
+    var total = '{{order.get_cart_total}}'
     // To hide the shipping form for digital products
 	if (shipping == 'False') {
 	 	document.getElementById('shipping-info').innerHTML = ''
