--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -8,10 +8,10 @@
                     {% csrf_token %}
                     <div id="user-info">
                         <div class="form-field">
-                            <input required class="form-control" type="text" name="name" placeholder="Name..">
+                            <input class="form-control" type="text" name="name" placeholder="Name">
                         </div>
                         <div class="form-field">
-                            <input required class="form-control" type="email" name="email" placeholder="Email..">
+                            <input class="form-control" type="email" name="email" placeholder="Email">
                         </div>
                     </div>
                     <div id="shipping-info">
@@ -19,19 +19,19 @@
                         <p>Shipping Information:</p>
                         <hr>
                         <div class="form-field">
-                            <input class="form-control" type="text" name="address" placeholder="Address..">
+                            <input required class="form-control" type="text" name="address" placeholder="Address">
                         </div>
                         <div class="form-field">
-                            <input class="form-control" type="text" name="city" placeholder="City..">
+                            <input required class="form-control" type="text" name="city" placeholder="City">
                         </div>
                         <div class="form-field">
-                            <input class="form-control" type="text" name="county" placeholder="County..">
+                            <input required class="form-control" type="text" name="county" placeholder="County">
                         </div>
                         <div class="form-field">
-                            <input class="form-control" type="text" name="postcode" placeholder="Postcode..">
+                            <input required class="form-control" type="text" name="postcode" placeholder="Postcode">
                         </div>
                         <div class="form-field">
-                            <input class="form-control" type="text" name="country" placeholder="Country..">
+                            <input required class="form-control" type="text" name="country" placeholder="Country">
                         </div>
                     </div>
                     <hr>
