Add the main image, the website's title and the introductory text to the store/home page

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -97,3 +97,14 @@ h1,h2,h3,h4,h5,h6 {
 .hidden {
 	display: none!important;
 }
+
+/* Media queries for mobile devices */
+@media screen and (min-width: 320px) and (max-width: 576px) {
+    #title {
+        padding-left: 13px;
+    }
+
+	#store-title {
+        padding-left: 13px;
+    }
+}
