Add the text about inline-6 engines to the bottom of the store/main page

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -107,4 +107,8 @@ h1,h2,h3,h4,h5,h6 {
 	#store-title {
         padding-left: 13px;
     }
+
+	#inline-6-text-title {
+        padding-left: 13px;
+    }
 }
