--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -45,4 +45,47 @@
         </div>
         {% endfor %}
     </div>
+    <br/><br/><br/><br/>
+    <!-- Inline-6 engine explanatory text -->
+    <div class="row justify-content-center" id="inline-6-text-title">
+        <h4><strong>A Word On the Inline-6 Engine</strong></h4>
+    </div>
+    <br/><br/>
+    <p>
+        Nowadays, the Nissan RB26DETT, the Toyota 2JZ-GTE and the BMW S54 engines are the best-known inline-6s 
+        around (we sell these and others on our website). Sometimes we call them inline-6s, straight-6s or even 
+        slant-6s (because they're installed at a 30-degree angle), but they're all six-cylinder engines arranged in 
+        a straight line along the crankshaft. Having all the cylinders in a row makes an inline-six inherently 
+        balanced.
+    </p>
+    <p>
+        In a piston engine, there's a lot of moving parts. The pistons move up and down, and they have inertia. And, 
+        every time they change direction, they exert what are called primary forces. That translates into engine 
+        vibration. Primary means that these forces happen only once per revolution of the crankshaft. Secondary 
+        forces are also related to the pistons' up and down movement. But they're just a little bit different 
+        because of where they're exerted. If the piston starts at top dead center, on the first 90 degrees of 
+        crankshaft rotation, the piston travels a little bit further than halfway through its whole stroke. That's 
+        because of the way the connecting rod attaches the piston to the crank. From 90 to 270 degrees of crank 
+        rotation, the piston doesn't travel quite as far. Then, from 270 to 360 degrees, it goes a bit further again. 
+        Since each portion of the movement happens in the same amount of time, that means the piston is traveling a 
+        little faster in the top half of its stroke than in the bottom half. These different speeds are the 
+        secondary forces that cause an imbalance of the engine, which means more vibration. An inline-six operates 
+        like two inline three-cylinder engines placed end-to-end. The pistons move as mirrored image parts. With one 
+        and six, two and five, and three and four always moving in tandem. When one pair is at top dead center, a 
+        second pair is moving downward and the third pair is moving upward. That cancels out the primary forces. 
+        Then, each of the crank throws is separated by 120 degrees, which cancels out the secondary forces. The 
+        result is that the engine naturally runs smoothly. And it sounds pretty good, too.
+    </p>
+    <p>
+        Another advantage to a straight-six is that putting all the cylinders in a line is a really simple layout. 
+        It only needs one basic engine block, one cylinder head, one valve cover and one set of valvetrain 
+        components. Since it's naturally balanced, there's no need to add balance shafts or anything extra to smooth 
+        it out. That makes it both a little cheaper to produce and much easier to work on.
+    </p>
+    <p>
+        This shape also leaves a lot of extra space along the sides of the engine bay for performance enhancers like 
+        turbos and exhaust headers (please see <a href="https://www.youtube.com/watch?v=JfaJ35vVQ9A" target="_blank" 
+        aria-label="Inline-6 vs. V6 - How It Works - Science Garage (opens in a new tab)" 
+        rel="external">Donut Media's video on the Inline-6 engine</a> for more information).
+    </p>
 {% endblock content %}
