Create a footer that'll be visible on all the pages on the website and add a link to Inline-6 Overnight's Facebook page to it

--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -109,7 +109,48 @@
 
             {% endblock content %}
         </div>
-
+        <br/><br/>
+        <!-- Footer -->
+        <footer class="bg-dark text-center text-white">
+            <div class="container p-4 pb-0">
+                <section class="">
+                    <!-- Newsletter -->
+                    <form action="">
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-auto">
+                                <p class="pt-2">
+                                    <strong>Sign up for our newsletter</strong>
+                                </p>
+                            </div>
+                            <!-- Email input for the newsletter-->
+                            <div class="col-md-5 col-12">
+                                <div class="form-outline form-white mb-4">
+                                    <input type="email" id="form5Example29" class="form-control" />
+                                    <label class="form-label" for="form5Example29">Email address</label>
+                                </div>
+                            </div>
+                            <!-- Subscribe button -->
+                            <div class="col-auto">
+                                <button type="submit" class="btn btn-outline-light mb-4">
+                                    Subscribe
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </section>
+            </div>
+            <!-- Social media and copyright -->
+            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+                Follow us on Facebook 
+                <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/" 
+                role="button" target="_blank" aria-label="Follow Inline-6 Overnight on Facebook (opens in a new tab)" 
+                rel="noopener noreferrer nofollow"><i class="fab fa-facebook-f"></i></a>
+            </div>
+            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+                © 2022 Copyright:
+                <a class="text-white" href="https://mdbootstrap.com/">Inline-6 Overnight</a>
+            </div>
+        </footer>
         <!-- JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js" 
