--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -65,7 +65,7 @@
         </div>
     </div>
 <!-- PayPal JavaScript SDK -->
-<script src="https://www.paypal.com/sdk/js?client-id=sb&currency=EUR"></script>
+<script src="https://www.paypal.com/sdk/js?client-id=sb&currency=EUR&disable-funding=credit"></script>
 
 <script>
     // To render the PayPal button into #paypal-button-container
