--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -41,8 +41,7 @@
             <br>
             <div class="box-element hidden" id="payment-info">
                 <small>PayPal Options</small>
-                <div id="paypal-button-container"></div>
-                <!-- <button id="make-payment">Make Payment</button> -->
+                <button id="make-payment">Make Payment</button>
             </div>
         </div>
         <div class="col-lg-6">
@@ -64,41 +63,6 @@
             </div>
         </div>
     </div>
-<!-- PayPal JavaScript SDK -->
-<script src="https://www.paypal.com/sdk/js?client-id=sb&currency=EUR&disable-funding=credit"></script>
-
-<script>
-    // To render the PayPal button into #paypal-button-container
-    paypal.Buttons({
-
-        style: {
-          color: 'blue',
-          shape: 'rect',
-       },
-
-        // To set up the transaction (to launch the PayPal checkout experience)
-        createOrder: function(data, actions) {
-            return actions.order.create({
-                purchase_units: [{
-                    amount: {
-                        value: '0.01'
-                    }
-                }]
-            });
-        },
-
-        // To finalize the transaction
-        onApprove: function(data, actions) {
-            return actions.order.capture().then(function(details) {
-                // To show a success message to the buyer
-                alert('Transaction completed by ' + details.payer.name.given_name + '!');
-            });
-        }
-
-
-    }).render('#paypal-button-container');
-</script>
-
 <!-- JavaScript code for the checkout page -->
 <script type="text/javascript">
 	var shipping = '{{order.shipping}}'
@@ -130,11 +94,9 @@
 	    })
     // To add an event handler to the new "payment-submit" button
     // and create a function to trigger on submission
-    /*
     document.getElementById('make-payment').addEventListener('click', function(e) {
-	    	submitFormData()
-	    })
-    */
+	    submitFormData()
+	})
 	function submitFormData() {
 	    console.log('Payment button clicked')
 
