--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -36,9 +36,11 @@
             <div class="box-element product">
                 <h6><strong>{{product.name}}</strong></h6>
                 <hr>
-                <button data-product={{product.id}} data-action="add" class="btn btn-dark add-btn update-cart">
-                    Add to Cart
-                </button>
+                {% if user.is_authenticated %}
+                    <button data-product={{product.id}} data-action="add" class="btn btn-dark add-btn update-cart">
+                        Add to Cart
+                    </button>
+                {% endif %}
                 <a class="btn btn-outline-secondary" href="#">View</a>
                 <h4 style="display: inline-block; float: right">€{{product.price|floatformat:2}}</h4>
             </div>
