--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -151,7 +151,7 @@
             </div>
             <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
                 © 2022 Copyright:
-                <a class="text-white" href="https://mdbootstrap.com/">Inline-6 Overnight</a>
+                <a class="text-white" href="/">Inline-6 Overnight</a>
             </div>
         </footer>
         <!-- JavaScript -->
