Add a username display, add forms.py and alter registration page

--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -84,7 +84,7 @@
                         <li class="nav-item dropdown">
                             <a class="dropdown-toggle btn btn-light" href="#" id="navbarDropdown" role="button" 
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            User
+                            {{ user.username }}
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="#">Admin</a>
