--- a/store/templates/store/signup.html
+++ b/store/templates/store/signup.html
@@ -4,7 +4,7 @@
     <br/>
     <h2>Sign Up to Start Shopping with Inline-6 Overnight</h2>
     <br/><br/><br/>
-    <form method="post">
+    <form action="/signup/" method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Sign up</button>
