Fix size for the product price on the store/home page

--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -42,7 +42,7 @@
                     </button>
                 {% endif %}
                 <a class="btn btn-outline-secondary" href="#">View</a>
-                <h4 style="display: inline-block; float: right">€{{product.price|floatformat:2}}</h4>
+                <h4 class="price" style="display: inline-block; float: right">€{{product.price|floatformat:2}}</h4>
             </div>
         </div>
         {% endfor %}
