--- a/static/css/main.css
+++ b/static/css/main.css
@@ -98,6 +98,20 @@ h1,h2,h3,h4,h5,h6 {
 	display: none!important;
 }
 
+/* Media queries for laptops */
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+	.price {
+		font-size: 20px;
+	}
+}
+
+/* Media queries for tablets */
+@media screen and (min-width: 576px) and (max-width: 768px) {
+	.price {
+		font-size: 10px;
+	}
+}
+
 /* Media queries for mobile devices */
 @media screen and (min-width: 320px) and (max-width: 576px) {
     #title {
@@ -111,4 +125,11 @@ h1,h2,h3,h4,h5,h6 {
 	#inline-6-text-title {
         padding-left: 13px;
     }
+}
+
+/* Media queries for smaller mobile devices */
+@media screen and (min-width: 320px) and (max-width: 480px) {
+	.price {
+		font-size: 16px;
+	}
 }
