Fix responsiveness in small devices for the products in store.html

--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -31,7 +31,7 @@
     <br/><br/>
     <div class="row">
         {% for product in products %}
-        <div class="col-lg-4 col-md-6 col-sm-6">
+        <div class="col-lg-4 col-md-6 col-sm-6 product-size">
             <img class="thumbnail" src="{{product.imageURL}}" alt="Product image">
             <div class="box-element product">
                 <h6><strong>{{product.name}}</strong></h6>
