--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -3,17 +3,17 @@
 {% block content %}
     {% if user.is_authenticated %}
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 cart-size">
                 <div class="box-element">
                     <a  class="btn btn-outline-dark" href="{% url 'store' %}">&#x2190; Continue Shopping</a>
                     <br>
                     <br>
                     <table class="table">
                         <tr>
-                            <th><h5>Items: <strong>{{order.get_cart_items}}</strong></h5></th>
-                            <th><h5>Total: <strong>€{{order.get_cart_total|floatformat:2}}</strong></h5></th>
+                            <th><h5 class="cart-size">Items: <strong>{{order.get_cart_items}}</strong></h5></th>
+                            <th><h5 class="cart-size">Total: <strong>€{{order.get_cart_total|floatformat:2}}</strong></h5></th>
                             <th>
-                                <a style="float: right; margin: 5px;" class="btn btn-success" href="{% url 'checkout' %}">
+                                <a style="float: right; margin: 5px;" class="btn btn-success cart-size" href="{% url 'checkout' %}">
                                     Checkout
                                 </a>
                             </th>
