--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -87,7 +87,9 @@
                             {{ user.first_name }} {{ user.last_name }}
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Admin</a>
+                                {% if user.is_superuser %}
+                                    <a class="dropdown-item" href="{% url 'admin' %}">Admin</a>
+                                {% endif %}
                                 <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
                             </div>
                         </li>
