Create login template, login view and login url, and link everything to login button on navbar

--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -102,7 +102,7 @@
                             <a href="{% url 'signup' %}" class="btn btn-light">Sign up</a>
                         </li>
                         <li>
-                            <a href="#" class="btn btn-light">Log in</a>
+                            <a href="{% url 'login' %}" class="btn btn-light">Log in</a>
                         </li>
                     {% endif %}
                </div>
