--- a/store/templates/store/login.html
+++ b/store/templates/store/login.html
@@ -6,7 +6,7 @@
     <br/><br/><br/>
     <form action="{% url 'login' %}" method="post">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ login_form.as_p }}
         <button type="submit" class="btn btn-dark">Log in</button>
     </form>
 {% endblock content %}
