--- a/store/templates/store/login.html
+++ b/store/templates/store/login.html
@@ -4,9 +4,14 @@
     <br/>
     <h2>Log In to Start Shopping with Inline-6 Overnight</h2>
     <br/><br/><br/>
+    <!-- Back button -->
+    <a href="{% url 'store' %}" class="btn btn-dark">Back</a>
+    <br/><br/><br/>
     <form action="{% url 'login' %}" method="post">
         {% csrf_token %}
         {{ login_form.as_p }}
         <button type="submit" class="btn btn-dark">Log in</button>
     </form>
+    <br/>
+    <p class="text-center">Don't have an account yet? <a href="{% url 'signup' %}">Sign up here!</a></p>
 {% endblock content %}
