--- a/store/templates/store/signup.html
+++ b/store/templates/store/signup.html
@@ -13,5 +13,5 @@
         <button type="submit" class="btn btn-dark">Sign up</button>
     </form>
     <br/>
-    <p class="text-center">Already have an account? <a href="{% url 'login' %}">Sign in here!</a></p>
+    <p class="text-center">Already have an account? <a href="{% url 'login' %}">Log in here!</a></p>
 {% endblock content %}
