Create the product detail view, url and empty template, and link it to the product view button in store.html

--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -41,7 +41,7 @@
                         Add to Cart
                     </button>
                 {% endif %}
-                <a class="btn btn-outline-secondary" href="#">View</a>
+                <a class="btn btn-outline-secondary" href="{% url 'product_detail' product.id %}">View</a>
                 <h4 class="price" style="display: inline-block; float: right">€{{product.price|floatformat:2}}</h4>
             </div>
         </div>
