--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -12,11 +12,13 @@
                         <tr>
                             <th><h5 class="cart-size">Items: <strong>{{order.get_cart_items}}</strong></h5></th>
                             <th><h5 class="cart-size">Total: <strong>€{{order.get_cart_total|floatformat:2}}</strong></h5></th>
-                            <th>
-                                <a style="float: right; margin: 5px;" class="btn btn-success cart-size" href="{% url 'checkout' %}">
-                                    Checkout
-                                </a>
-                            </th>
+                            {% if items %}
+                                <th>
+                                    <a style="float: right; margin: 5px;" class="btn btn-success cart-size" href="{% url 'checkout' %}">
+                                        Checkout
+                                    </a>
+                                </th>
+                            {% endif %}
                         </tr>
                     </table>
                 </div>
