--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -110,6 +110,16 @@
         </nav>
 
         <div class="container">
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-success alert-dismissible fade show" role="alert">
+                        {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                {% endfor %}
+            {% endif %}
             {% block content %}
 
             {% endblock content %}
