--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -151,4 +151,10 @@
         <br/>
         <h1>Please log in to shop with Inline-6 Overnight</h1>
     {% endif %}
+    {% block postloadjs %}
+        {{ block.super }}
+            {{ stripe_public_key|json_script:"id_stripe_public_key" }}
+                {{ client_secret|json_script:"id_client_secret" }}
+                    <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
+    {% endblock %}
 {% endblock content %}
