Add Stripe JS code to stripe_elements.js, Stripe CSS code to main.css, Stripe keys to views.py, block postloadjs to main.html an a Stripe fieldset code to checkout.html, and  change Stripe static link in checkout.html

--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -180,5 +180,7 @@
         crossorigin="anonymous"></script>
         <!-- Link to the JS folder in Static files -->
         <script type="text/javascript" src="{% static 'js/cart.js' %}"></script>
+        {% block postloadjs %}
+        {% endblock %}
     </body>
 </html>
