--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -36,12 +36,21 @@
                             </div>
                         </div>
                         <hr>
+                        
                         <input id="form-button" class="btn btn-success btn-block" type="submit" value="Continue">
                     </form>
                 </div>
                 <br>
                 <div class="box-element hidden" id="payment-info">
-                    <small>Payment Options</small>
+                    <fieldset class="px-3">
+                        <legend class="fieldset-label small text-black px-2 w-auto">Payment</legend>
+                        <!-- A Stripe card element will go here -->
+                        <div class="mb-3" id="card-element"></div>
+                        <!-- Used to display form errors -->
+                        <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
+                        <!-- Pass the client secret to the view so we can get the payment intent id -->
+                        <input type="hidden" value="{{ client_secret }}" name="client_secret">
+                    </fieldset>
                     <button id="make-payment">Make Payment</button>
                 </div>
             </div>
@@ -151,10 +160,10 @@
         <br/>
         <h1>Please log in to shop with Inline-6 Overnight</h1>
     {% endif %}
-    {% block postloadjs %}
-        {{ block.super }}
-            {{ stripe_public_key|json_script:"id_stripe_public_key" }}
-                {{ client_secret|json_script:"id_client_secret" }}
-                    <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
-    {% endblock %}
 {% endblock content %}
+{% block postloadjs %}
+    {{ block.super }}
+        {{ stripe_public_key|json_script:"id_stripe_public_key" }}
+            {{ client_secret|json_script:"id_client_secret" }}
+                <script src="{% static 'js/stripe_elements.js' %}"></script>
+{% endblock %}
