--- a/static/css/main.css
+++ b/static/css/main.css
@@ -211,6 +211,13 @@ select option[value=""] {
 }
 
 /* Media queries for smaller mobile devices */
+@media screen and (min-width: 380px) and (max-width: 434px) {
+	.button-size {
+		font-size: 8px;
+	}
+}
+
+/* Media queries for even smaller mobile devices */
 @media screen and (min-width: 320px) and (max-width: 480px) {
 	.price {
 		font-size: 16px;
