--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -37,11 +37,13 @@
                 <h6><strong>{{product.name}}</strong></h6>
                 <hr>
                 {% if user.is_authenticated %}
-                    <button data-product={{product.id}} data-action="add" class="btn btn-dark add-btn update-cart">
+                    <button data-product={{product.id}} data-action="add" class="btn btn-dark add-btn update-cart button-size">
                         Add to Cart
                     </button>
                 {% endif %}
-                <a class="btn btn-outline-secondary" href="{% url 'product_detail' product.id %}">View</a>
+                <a class="btn btn-outline-secondary button-size" href="{% url 'product_detail' product.id %}">
+                    View
+                </a>
                 <h4 class="price" style="display: inline-block; float: right">€{{product.price|floatformat:2}}</h4>
             </div>
         </div>
