Add contact number for Customer Service to the footer

--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -156,6 +156,9 @@
             </div>
             <!-- Social media and copyright -->
             <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+                Customer Service: +353 1 797 97 97
+            </div>
+            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
                 Follow us on Facebook 
                 <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/" 
                 role="button" target="_blank" aria-label="Follow Inline-6 Overnight on Facebook (opens in a new tab)" 
