--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -42,7 +42,9 @@
                 <br>
                 <div class="box-element hidden" id="payment-info">
                     <small>PayPal Options</small>
-                    <button id="make-payment">Make Payment</button>
+                    <!-- Container element for the payment button -->
+                    <div id="paypal-button-container"></div>
+                    <!-- <button id="make-payment">Make Payment</button> -->
                 </div>
             </div>
             <div class="col-lg-6">
@@ -64,10 +66,45 @@
                 </div>
             </div>
         </div>
+
+        <!-- PayPal JavaScript SDK / Client ID (it doesn't have to be hidden ) -->
+        <script src="https://www.paypal.com/sdk/js?client-id=AY6L0BrA4KKQtYZIGNBHS76tEEgravANJHyAYClNUPQ5uhtgjUFUIsU1hLgZhyHG6GYBTepHgMqQhNsz&currency=EUR&disable-funding=credit"></script>
+
+        <script>
+            var total = '{{order.get_cart_total}}'
+            // Render the PayPal button into #paypal-button-container
+            paypal.Buttons({
+
+                style:{
+                    color: 'blue',
+                    shape: 'rect',
+                },
+    
+                // Create order method to set up the transaction
+                createOrder: function(data, actions) {
+                    return actions.order.create({
+                        purchase_units: [{
+                            amount: {
+                                value: parseFloat(total).toFixed(2)
+                            }
+                        }]
+                    });
+                },
+    
+                // On approve method to finalize the transaction
+                onApprove: function(data, actions) {
+                    return actions.order.capture().then(function(details) {
+                        submitFormData()
+                    });
+                }
+    
+    
+            }).render('#paypal-button-container');
+        </script>
+
         <!-- JavaScript code for the checkout page -->
         <script type="text/javascript">
             var shipping = '{{order.shipping}}'
-            var total = '{{order.get_cart_total}}'
             // To hide the shipping form for digital products
             if (shipping == 'False') {
                 document.getElementById('shipping-info').innerHTML = ''
@@ -95,9 +132,11 @@
                 })
             // To add an event handler to the new "payment-submit" button
             // and create a function to trigger on submission
+            /*
             document.getElementById('make-payment').addEventListener('click', function(e) {
                 submitFormData()
             })
+            */
             function submitFormData() {
                 console.log('Payment button clicked')
 
