Add the Facebook pagellink for Inline-6 Overnight to the footer and update the unficed bugs sub-section of the README.md file

--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -160,7 +160,8 @@
             </div>
             <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
                 Follow us on Facebook 
-                <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/" 
+                <a class="btn btn-outline-light btn-floating m-1" 
+                href="https://www.facebook.com/profile.php?id=100088354246797" 
                 role="button" target="_blank" aria-label="Follow Inline-6 Overnight on Facebook (opens in a new tab)" 
                 rel="noopener noreferrer nofollow"><i class="fab fa-facebook-f"></i></a>
             </div>
