--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -7,6 +7,8 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" 
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <!-- Mailchimp CSS -->
+        <link href="//cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css">
         <!-- Link to the CSS folder in Static files -->
         <link href="{% static 'css/main.css' %}" rel="stylesheet" type="text/css">
         <!-- Font Awesome -->
@@ -137,19 +139,47 @@
                                     <strong>Sign up for our newsletter</strong>
                                 </p>
                             </div>
-                            <!-- Email input for the newsletter-->
-                            <div class="col-md-5 col-12">
-                                <div class="form-outline form-white mb-4">
-                                    <input type="email" id="form5Example29" class="form-control" />
-                                    <label class="form-label" for="form5Example29">Email address</label>
-                                </div>
+                            <!-- Mailchimp signup form -->
+                            <div id="mc_embed_signup">
+                                <form action="https://gmail.us21.list-manage.com/subscribe/post?u=c14a1487452bb800abe561392&amp;id=6c9e7f6db7&amp;f_id=00ddc0e1f0" 
+                                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" 
+                                class="validate" target="_blank" novalidate>
+                                    <div id="mc_embed_signup_scroll">
+                                        <div class="indicates-required">
+                                            <span class="asterisk">*</span> indicates required
+                                        </div>
+                                        <div class="mc-field-group">
+                                            <label for="mce-EMAIL">
+                                                Email Address  <span class="asterisk">*</span>
+                                            </label>
+                                            <input type="email" value="" name="EMAIL" class="required email" 
+                                            id="mce-EMAIL" required>
+                                        </div>
+                                        <div id="mce-responses" class="clear foot">
+                                            <div class="response" id="mce-error-response" style="display:none"></div>
+                                            <div class="response" id="mce-success-response" style="display:none"></div>
+                                        </div>
+                                        <!-- Do not remove this or risk form bot signups -->
+                                        <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                                            <input type="text" name="b_c14a1487452bb800abe561392_6c9e7f6db7" 
+                                            tabindex="-1" value="">
+                                        </div>
+                                        <div class="optionalParent">
+                                            <div class="clear foot">
+                                                <input type="submit" value="Subscribe" name="subscribe" 
+                                                id="mc-embedded-subscribe" class="button">
+                                                <p class="brandingLogo">
+                                                    <a href="http://eepurl.com/ifBaLH" 
+                                                    title="Mailchimp - email marketing made easy and fun">
+                                                        <img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_light_dtp.svg">
+                                                    </a>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
-                            <!-- Subscribe button -->
-                            <div class="col-auto">
-                                <button type="submit" class="btn btn-outline-light mb-4">
-                                    Subscribe
-                                </button>
-                            </div>
+                            <!--End of Mailchimp signup form -->
                         </div>
                     </form>
                 </section>
@@ -182,5 +212,26 @@
         crossorigin="anonymous"></script>
         <!-- Link to the JS folder in Static files -->
         <script type="text/javascript" src="{% static 'js/cart.js' %}"></script>
+        <!-- Mailchimp -->
+        <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+        <script type='text/javascript'>
+            (function($) {
+                window.fnames = new Array(); 
+                window.ftypes = new Array();
+                fnames[0]='EMAIL';
+                ftypes[0]='email';
+                fnames[1]='FNAME';
+                ftypes[1]='text';
+                fnames[2]='LNAME';
+                ftypes[2]='text';
+                fnames[3]='ADDRESS';
+                ftypes[3]='address';
+                fnames[4]='PHONE';
+                ftypes[4]='phone';
+                fnames[5]='BIRTHDAY';
+                ftypes[5]='birthday';
+            }(jQuery));
+            var $mcj = jQuery.noConflict(true);
+        </script>
     </body>
 </html>
