--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -169,7 +169,8 @@
                                                 <input type="submit" value="Subscribe" name="subscribe" 
                                                 id="mc-embedded-subscribe" class="button">
                                                 <p class="brandingLogo">
-                                                    <a href="http://eepurl.com/ifBaLH" 
+                                                    <a href="http://eepurl.com/ifBaLH" target="_blank" 
+                                                    aria-label="Made with Mailchimp (opens in a new tab)" 
                                                     title="Mailchimp - email marketing made easy and fun">
                                                         <img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_light_dtp.svg">
                                                     </a>
