Create the Privacy Policy and add the link to it to the footer

--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -171,7 +171,8 @@
                                                 <p class="brandingLogo">
                                                     <a href="http://eepurl.com/ifBaLH" target="_blank" 
                                                     aria-label="Made with Mailchimp (opens in a new tab)" 
-                                                    title="Mailchimp - email marketing made easy and fun">
+                                                    title="Mailchimp - email marketing made easy and fun" 
+                                                    rel="noopener noreferrer nofollow">
                                                         <img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_light_dtp.svg">
                                                     </a>
                                                 </p>
@@ -185,7 +186,7 @@
                     </form>
                 </section>
             </div>
-            <!-- Social media and copyright -->
+            <!-- Social media, privacy policy and copyright -->
             <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
                 Customer Service: +353 1 797 97 97
             </div>
@@ -195,6 +196,12 @@
                 href="https://www.facebook.com/profile.php?id=100088354246797" 
                 role="button" target="_blank" aria-label="Follow Inline-6 Overnight on Facebook (opens in a new tab)" 
                 rel="noopener noreferrer nofollow"><i class="fab fa-facebook-f"></i></a>
+            </div>
+            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+                <a href="https://www.privacypolicygenerator.info/live.php?token=vZ9uwn90t9o5EtEHjNUJKbSbxLq0Ga9Q" 
+                target="_blank" aria-label="Privacy Policy (opens in a new tab)" class="text-white">
+                    Privacy Policy
+                </a>
             </div>
             <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
                 © 2022 Copyright:
