--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -68,10 +68,10 @@
         <!-- Logo -->
         <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="{% url 'store' %}">Inline-6 Overnight</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" 
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-          
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
@@ -110,7 +110,6 @@
                </div>
             </div>
         </nav>
-
         <div class="container">
             {% if messages %}
                 {% for message in messages %}
@@ -172,7 +171,7 @@
                                                     <a href="http://eepurl.com/ifBaLH" target="_blank" 
                                                     aria-label="Made with Mailchimp (opens in a new tab)" 
                                                     title="Mailchimp - email marketing made easy and fun" 
-                                                    rel="noopener noreferrer nofollow">
+                                                    rel="external noopener noreferrer nofollow">
                                                         <img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_light_dtp.svg">
                                                     </a>
                                                 </p>
@@ -195,11 +194,12 @@
                 <a class="btn btn-outline-light btn-floating m-1" 
                 href="https://www.facebook.com/profile.php?id=100088354246797" 
                 role="button" target="_blank" aria-label="Follow Inline-6 Overnight on Facebook (opens in a new tab)" 
-                rel="noopener noreferrer nofollow"><i class="fab fa-facebook-f"></i></a>
+                rel="external noopener noreferrer nofollow"><i class="fab fa-facebook-f"></i></a>
             </div>
             <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
                 <a href="https://www.privacypolicygenerator.info/live.php?token=vZ9uwn90t9o5EtEHjNUJKbSbxLq0Ga9Q" 
-                target="_blank" aria-label="Privacy Policy (opens in a new tab)" class="text-white">
+                target="_blank" aria-label="Privacy Policy (opens in a new tab)" 
+                rel="external noopener noreferrer nofollow" class="text-white">
                     Privacy Policy
                 </a>
             </div>
