--- a/store/templates/store/product_detail.html
+++ b/store/templates/store/product_detail.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <div class="text-center mt-3">
-        <img src="{{ data.imageURL }}" class="img-fluid w-75" alt="Inline-6 engine image">
+        <img src="{{ data.imageURL }}" class="img-fluid w-75" alt="Product image">
     </div>
     <br/><br/><br/>
     <div class="row justify-content-center" id="title">
